  may now be controlled by commandline argument. (dramsey)
* Improved solar system catalog file format so it's easier to install add-ons
* Scan extras directory for solar system catalog files
* Fixed pixel shader rendering path so it uses star light color
* Added support for textures in 3DS models
* Fixed locations menu
* Improved locations menu so that position and frame of reference are saved
  and restored.
* Fixed broken script commands: setposition, setorientation, and move
* Display the names of tracked and followed objects
* Windows: replaced proliferating render and label options in menu with
  a single modeless dialog.
* Fixed period and rotation of Phoebe

	
1.2.1
* Unix: configure.in changes to better find OpenGL libraries by Bruckner.
* Added accurate orbital calculations for Galilean satellites.
* Added tolerance parameter for picking to make picking objects in a narrow
  narrow field of view work better.
* New texture for Miranda courtesy of Bruckner.
* Windows: Fixed bug that caused a crash when canceling the view options dialog
* Windows: Fixed crash that occurred when recalling a location with
  no selection

	
1.2.2
* Improved find algorithm for starnames, and combined names from hdnames.dat
  into starnames.dat. Also added several additional names and variant spellings
  from my Star Atlas into starnames.dat (whose format has been completely
  revamped). (dramsey)
* Unix GTK: Got Ctrl-Q to exit the Program properly. (dramsey)
* Unix GTK: Capture Filenames now starts up with a proper filename, remembers
            the last directory, and complains about bad filenames. (dramsey)
* Added 'verbose' option, and supressed most non-error type messages unless
  verbose is set. (dramsey)
* Made picking exact for oblate planets
* Optimized rendering of planet meshes
* Switched to high levels of details when camera is near surface of a planet
* Improved the appearance of the corona around stars